# ITR

./: .gitignore  MANIFEST.in  PayU_Integration_Summary.md  README.md  check_whatsapp.py  fix_rm_names.py  install.sh  pyproject.toml  requirements.txt  test_hash.py  test_hash_v2.py  test_hash_v3.py  test_hash_verify.py  test_matching.py
payu_frappe/: api.py  hooks.py  modules.txt  payment_reconcile.py  utils.py
payu_frappe/payu_frappe/doctype/rm_assignment_control/: rm_assignment_control.json
payu_frappe/payu_integration/doctype/itr_filing_submission/: itr_filing_submission.js  itr_filing_submission.json  itr_filing_submission.py  itr_filing_submission_list.js
payu_frappe/payu_integration/doctype/payu_settings/: payu_settings.json
payu_frappe/payu_integration/doctype/payu_transaction_log/: payu_transaction_log.json
payu_frappe/payu_integration/doctype/picky_assist_message/: picky_assist_message.json  picky_assist_message.py
payu_frappe/payu_integration/doctype/picky_assist_settings/: picky_assist_settings.json  picky_assist_settings.py
payu_frappe/payu_integration/doctype/picky_assist_template/: picky_assist_template.json  picky_assist_template.py
payu_frappe/payu_integration/doctype/rm_assignment_control/: rm_assignment_control.json  rm_assignment_control.py
payu_frappe/payu_integration/doctype/whatsapp_message/: whatsapp_message.json  whatsapp_message.py
payu_frappe/payu_integration/doctype/whatsapp_settings/: whatsapp_settings.json  (+1 more)
payu_frappe/www/: payment_failed.html  payment_success.html  payu_checkout.html  payu_checkout.py
